--- a/app/src/main/res/layout-land/activity_main_calendar.xml
+++ b/app/src/main/res/layout-land/activity_main_calendar.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_gravity="center_vertical|center_horizontal"
+    android:gravity="center"
     android:orientation="vertical"
     android:verticalScrollbarPosition="right"
     android:visibility="visible"
