[FIXED] Calculator.java First Variant

--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -31,8 +31,9 @@
         android:layout_marginStart="@dimen/margin_start"
         android:layout_marginTop="@dimen/margin_min"
         android:layout_marginEnd="@dimen/margin_main"
+        android:paddingStart="@dimen/margin_min"
         android:background="@android:color/darker_gray"
-        android:inputType="numberDecimal"
+        android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -114,6 +115,7 @@
         android:layout_width="@dimen/dimen_height_width"
         android:layout_height="wrap_content"
         android:text="@string/text_persent"
+        android:enabled="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/button_div"
@@ -166,6 +168,7 @@
         android:layout_width="@dimen/dimen_height_width"
         android:layout_height="wrap_content"
         android:text="@string/text_1_x"
+        android:enabled="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/button_multi"
