--- a/app/src/main/res/layout-land/activity_calculator.xml
+++ b/app/src/main/res/layout-land/activity_calculator.xml
@@ -105,6 +105,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:text="@string/text_persent"
+        android:enabled="false"
         app:layout_constraintStart_toEndOf="@id/button_div"
         app:layout_constraintTop_toTopOf="@id/guideline2" />
 
@@ -154,6 +155,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:text="@string/text_1_x"
+        android:enabled="false"
         app:layout_constraintStart_toEndOf="@id/button_multi"
         app:layout_constraintTop_toBottomOf="@id/button_persent"
         tools:layout_editor_absoluteY="262dp" />
