--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -65,7 +65,7 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Результат" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button_7"
         android:layout_width="@dimen/dimen_height_width"
         android:layout_height="wrap_content"
@@ -77,7 +77,7 @@
         app:layout_constraintTop_toTopOf="@id/guideline2"
         tools:layout_editor_absoluteY="234dp" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button_8"
         android:layout_width="@dimen/dimen_height_width"
         android:layout_height="wrap_content"
@@ -88,7 +88,7 @@
         app:layout_constraintTop_toTopOf="@id/guideline2"
         tools:layout_editor_absoluteY="234dp" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button_9"
         android:layout_width="@dimen/dimen_height_width"
         android:layout_height="wrap_content"
@@ -99,18 +99,19 @@
         app:layout_constraintTop_toTopOf="@id/guideline2"
         tools:layout_editor_absoluteY="234dp" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button_div"
         android:layout_width="@dimen/dimen_height_width"
         android:layout_height="wrap_content"
         android:text="@string/text_div"
+        style="@style/ButtonOperationCalculator"
         app:layout_constraintEnd_toStartOf="@+id/button_persent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/button_9"
         app:layout_constraintTop_toTopOf="@id/guideline2"
         tools:layout_editor_absoluteY="234dp" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button_persent"
         android:layout_width="@dimen/dimen_height_width"
         android:layout_height="wrap_content"
@@ -122,7 +123,7 @@
         app:layout_constraintTop_toTopOf="@id/guideline2"
         tools:layout_editor_absoluteY="234dp" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button_4"
         android:layout_width="@dimen/dimen_height_width"
         android:layout_height="wrap_content"
@@ -133,7 +134,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_7" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button_5"
         android:layout_width="@dimen/dimen_height_width"
         android:layout_height="wrap_content"
@@ -143,7 +144,7 @@
         app:layout_constraintStart_toEndOf="@+id/button_4"
         app:layout_constraintTop_toBottomOf="@+id/button_8" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button_6"
         android:layout_width="@dimen/dimen_height_width"
         android:layout_height="wrap_content"
@@ -153,28 +154,30 @@
         app:layout_constraintStart_toEndOf="@+id/button_5"
         app:layout_constraintTop_toBottomOf="@+id/button_9" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button_multi"
         android:layout_width="@dimen/dimen_height_width"
         android:layout_height="wrap_content"
         android:text="@string/text_multi"
+        style="@style/ButtonOperationCalculator"
         app:layout_constraintEnd_toStartOf="@+id/button"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/button_6"
         app:layout_constraintTop_toBottomOf="@+id/button_div" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button"
         android:layout_width="@dimen/dimen_height_width"
         android:layout_height="wrap_content"
         android:text="@string/text_1_x"
+
         android:enabled="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/button_multi"
         app:layout_constraintTop_toBottomOf="@+id/button_persent" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button_1"
         android:layout_width="@dimen/dimen_height_width"
         android:layout_height="wrap_content"
@@ -195,17 +198,18 @@
         app:layout_constraintStart_toEndOf="@+id/button_2"
         app:layout_constraintTop_toBottomOf="@+id/button_6" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button_sub"
         android:layout_width="@dimen/dimen_height_width"
         android:layout_height="wrap_content"
         android:text="@string/text_sub"
+        style="@style/ButtonOperationCalculator"
         app:layout_constraintEnd_toStartOf="@+id/button_equal"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/button_3"
         app:layout_constraintTop_toBottomOf="@+id/button_multi" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button_2"
         android:layout_width="@dimen/dimen_height_width"
         android:layout_height="wrap_content"
@@ -215,7 +219,7 @@
         app:layout_constraintStart_toEndOf="@+id/button_1"
         app:layout_constraintTop_toBottomOf="@+id/button_5" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button_equal"
         android:layout_width="@dimen/dimen_height_width"
         android:layout_height="96dp"
@@ -227,7 +231,7 @@
         app:layout_constraintTop_toBottomOf="@+id/button"
         tools:layout_editor_absoluteX="301dp" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button_0"
         android:layout_width="130dp"
         android:layout_height="wrap_content"
@@ -240,7 +244,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_1" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button_dot"
         android:layout_width="@dimen/dimen_height_width"
         android:layout_height="wrap_content"
@@ -250,11 +254,12 @@
         app:layout_constraintStart_toEndOf="@+id/button_0"
         app:layout_constraintTop_toBottomOf="@+id/button_3" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button_add"
         android:layout_width="60dp"
         android:layout_height="wrap_content"
         android:text="@string/text_add"
+        style="@style/ButtonOperationCalculator"
         app:layout_constraintEnd_toStartOf="@+id/button_equal"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/button_dot"
