--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,6 @@
     <dimen name="margin_start">16dp</dimen>
     <dimen name="dimen_text_size_result">20sp</dimen>
     <dimen name="dimen_text_result_field">30sp</dimen>
+    <dimen name="dimen_text_size_activity">40sp</dimen>
+    <dimen name="dimen_text_size_sub_activity">30sp</dimen>
 </resources>
