--- a/app/src/main/res/layout-land/activity_calculator.xml
+++ b/app/src/main/res/layout-land/activity_calculator.xml
@@ -95,6 +95,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:text="@string/text_div"
+        style="@style/ButtonOperationCalculator"
         app:layout_constraintStart_toEndOf="@+id/button_9"
         app:layout_constraintTop_toTopOf="@id/guideline2" />
 
@@ -144,6 +145,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:text="@string/text_multi"
+        style="@style/ButtonOperationCalculator"
         app:layout_constraintStart_toEndOf="@id/button_6"
         app:layout_constraintTop_toBottomOf="@id/button_div"
         tools:layout_editor_absoluteY="262dp" />
@@ -183,6 +185,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:text="@string/text_sub"
+        style="@style/ButtonOperationCalculator"
         app:layout_constraintStart_toEndOf="@id/button_3"
         app:layout_constraintTop_toBottomOf="@id/button_multi" />
 
@@ -235,6 +238,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:text="@string/text_add"
+        style="@style/ButtonOperationCalculator"
         app:layout_constraintStart_toEndOf="@id/button_dot"
         app:layout_constraintTop_toBottomOf="@id/button_sub" />
 
